--- a/debian/rules
+++ b/debian/rules
@@ -7,8 +7,10 @@ DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 override_dh_auto_configure:
 	dh_auto_configure -- -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-                             -DLIB_INSTALL_DIR:PATH=/usr/lib/${DEB_HOST_MULTIARCH} \
-			     -DUSE_SETUP_PY=0
+                             -DLIB_INSTALL_DIR:PATH=/usr/lib/${DEB_HOST_MULTIARCH}
+
+override_dh_auto_build:
+	dh_auto_build -- doc
 
 override_dh_auto_install:
 	dh_auto_install
