--- a/debian/control
+++ b/debian/control
@@ -136,3 +136,27 @@ Description: Qpid Dispatch stat tool
  messages with one or more message brokers, and at the same time exchange
  messages directly with other endpoints without involving a broker at all.
 
+Package: qdmanage
+Architecture: all
+Depends: python-qpid-proton (>= 0.11.1),
+         python,
+         libqpid-dispatch1 (>= ${binary:Version}),
+         ${misc:Depends}
+Description: Qpid Dispatch manage tool
+ The Dispatch router is an AMQP router that provides advanced interconnect
+ for AMQP. It is not a broker. It will never assume ownership of a message.
+ It will, however, propagate settlement and disposition across a network
+ such that delivery guarantees are met.
+ .
+ The router is meant to be deployed in topologies of multiple routers,
+ preferably with redundant paths. It uses link-state routing protocols and
+ algorithms (similar to OSPF or IS-IS from the networking world) to
+ calculate the best path from every point to every other point and to
+ recover quickly from failures. It does not need to use clustering for
+ high availability; rather, it relies on redundant paths to provide
+ continued connectivity in the face of system or network failure.
+ .
+ A messaging client can make a single AMQP connection into a messaging
+ bus built of Dispatch routers and, over that connection, exchange
+ messages with one or more message brokers, and at the same time exchange
+ messages directly with other endpoints without involving a broker at all.
