--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ override_dh_auto_build:
 
 override_dh_auto_install:
 	dh_auto_install
-	chmod +x debian/tmp/usr/lib/${DEB_HOST_MULTIARCH}/qpid-dispatch/tests/ssl_certs/gencerts.sh
+	chmod +x debian/tmp/usr/lib/qpid-dispatch/tests/ssl_certs/gencerts.sh
 
 override_dh_auto_test:
 	# TODO enable them
