--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,8 @@ Build-Depends: debhelper (>= 9),
                graphviz,
                python-sphinx, 
                doxygen,
-               libqpid-proton4-dev (>= 0.11.1)
+               libqpid-proton4-dev (>= 0.11.1),
+               python-qpid-proton
 Standards-Version: 3.9.5
 Homepage: http://qpid.apache.org/components/dispatch-router
 
