--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Build-Depends: debhelper (>= 9),
                python-sphinx, 
                doxygen,
                libqpid-proton6-dev (>= 0.12.0),
-               python-qpid-proton
+               python-qpid-proton (>= 0.12.0)
 Standards-Version: 3.9.6
 Homepage: http://qpid.apache.org/components/dispatch-router
 
