--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9),
                python-dev,
                dh-python,
                graphviz,
-               python-sphinx, 
+               asciidoc (>= 8.6.8),
                doxygen,
                libqpid-proton10-dev (>= 0.14.0),
                python-qpid-proton (>= 0.14.0)
