--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,9 @@ Build-Depends: debhelper (>= 9),
                asciidoc (>= 8.6.8),
                dblatex,
                libqpid-proton10-dev (>= 0.17.0),
-               python-qpid-proton (>= 0.17.0)
+               python-qpid-proton (>= 0.17.0),
+               openssl-dev,
+               libwebsockets-dev (>= 2.1.0)
 Standards-Version: 3.9.7
 Homepage: http://qpid.apache.org/components/dispatch-router
 
@@ -18,6 +20,7 @@ Package: qdrouterd
 Architecture: any
 Depends: libqpid-proton10,
          adduser,
+         libwebsockets,
          ${shlibs:Depends}, ${misc:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Replaces:    libqpid-dispatch1, libqpid-dispatch1-dev
