--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends: debhelper (>= 9),
                libqpid-proton10-dev (>= 0.17.0),
                python-qpid-proton (>= 0.17.0),
                libssl-dev,
-               libwebsockets-dev (>= 2.1.0)
+               libwebsockets-dev
 Standards-Version: 3.9.7
 Homepage: http://qpid.apache.org/components/dispatch-router
 
