--- a/debian/rules
+++ b/debian/rules
@@ -10,6 +10,7 @@ CFLAGS += -Wno-error=switch
 
 override_dh_auto_configure:
 	dh_auto_configure -- -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+                             -DUSE_LIBWEBSOCKETS=OFF \
                              -DLIB_INSTALL_DIR:PATH=/usr/lib/${DEB_HOST_MULTIARCH}
 
 #override_dh_auto_build:
