--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 9),
                python-dev,
                dh-python,
                asciidoc (>= 8.6.8),
+               asciidoctor,
                dblatex,
                libqpid-proton-core10-dev (>= 0.24.0),
                libqpid-proton-proactor1-dev (>= 0.24.0),
