--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Architecture: any
 Depends: libqpid-proton-core10,
          adduser,
          libwebsockets7,
+         python3,
          ${shlibs:Depends}, ${misc:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Replaces:    libqpid-dispatch1, libqpid-dispatch1-dev
