--- a/debian/control
+++ b/debian/control
@@ -13,8 +13,7 @@ Build-Depends: debhelper (>= 9),
                libqpid-proton-core10-dev (>= 0.24.0),
                libqpid-proton-proactor1-dev (>= 0.24.0),
                python3-qpid-proton (>= 0.24.0),
-               libssl-dev,
-               libwebsockets-dev
+               libssl-dev
 Standards-Version: 3.9.7
 Homepage: http://qpid.apache.org/components/dispatch-router
 
@@ -22,7 +21,7 @@ Package: qdrouterd
 Architecture: any
 Depends: libqpid-proton-core10,
          adduser,
-         libwebsockets7,
+         proton3,
          ${shlibs:Depends}, ${misc:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Replaces:    libqpid-dispatch1, libqpid-dispatch1-dev
