--- a/tools/qdstat.in
+++ b/tools/qdstat.in
@@ -317,16 +317,23 @@ class BusManager(Node):
         objects = self.query('org.apache.qpid.dispatch.router')
 
         router = objects[0]
+
         if show_date_id:
             self.display_datetime_router_id()
 
-        rows.append(('Version',       router.version))
-        rows.append(('Mode',          router.mode))
-        rows.append(('Router Id',     router.id))
+        rows.append(('Version',        router.version))
+        rows.append(('Mode',           router.mode))
+        rows.append(('Router Id',      router.id))
+        try:
+            rows.append(('Worker Threads', router.workerThreads))
+        except:
+            pass
+
         try:
             rows.append(('Uptime',        TimeLong(router.uptimeSeconds)))
         except:
             pass
+            
         try:
             if router.memoryUsage > 0:
                 rows.append(('VmSize', NumKMG(router.memoryUsage,
