--- a/debian/rules
+++ b/debian/rules
@@ -16,16 +16,14 @@ override_dh_auto_configure:
 	dh_auto_configure -- -DCMAKE_BUILD_TYPE=RelWithDebInfo \
                              -DUSE_LIBWEBSOCKETS=OFF \
                              -DLIB_INSTALL_DIR:PATH=/usr/lib/${DEB_HOST_MULTIARCH} \
-			     -DPYTHON_EXECUTABLE=/usr/bin/python3 \
-                             -DPYTHON_INCLUDE_DIR=/usr/include/python3.6m \
-                             -DPYTHON_LIBRARY=/usr/lib/${DEB_HOST_MULTIARCH}/libpython3.6m.so
+			     -DPYTHON_EXECUTABLE=/usr/bin/python3
 
 #override_dh_auto_build:
 #	dh_auto_build -- doc
 
 override_dh_auto_install:
 	dh_auto_install
-	cp -a debian/tmp/usr/lib/python3.6/site-packages debian/tmp/usr/lib/python3.6/dist-packages
+	cp -a debian/tmp/usr/lib/python3.8/site-packages debian/tmp/usr/lib/python3.8/dist-packages
 
 override_dh_auto_test:
 	# TODO enable them
