--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ override_dh_auto_clean:
 
 override_dh_auto_configure:
 	dh_auto_configure -- -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-                             -DUSE_LIBWEBSOCKETS=OFF \
+                             -DUSE_LIBWEBSOCKETS=ON \
                              -DLIB_INSTALL_DIR:PATH=/usr/lib/${DEB_HOST_MULTIARCH} \
 			     -DPYTHON_EXECUTABLE=/usr/bin/python3 \
                              -DPYTHON_INCLUDE_DIR=/usr/include/python3.6m \
